--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<h2>Welcome to {{title}}</h2>
-<p>This is how I learn Angular</p>
-<p>{{message}}</p>
+<div class="wrapper">
+    <app-container></app-container>
+</div>
