--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -2,19 +2,21 @@
     <p>Number is: {{item}}</p>
 </div> -->
 <div *ngFor="let p of products; let i = index">
-    <p>{{i + 1}}</p>
-    <div>
+    <div class="product-container" [ngStyle]="{backgroundColor: p.available === 'Available' ? '#D5F5E3' : '#FADBD8'}">
         <div class="image-container"><img [src]="p.image" alt="" style="max-height: 60px; max-width: 60px;"></div>
         <div>
             <div class="name-container"><h6>{{p.name}}</h6></div>
             <div class="detailsContainer">
-                <div class="details">{{p.available}}</div>
+                <div class="details" [ngStyle]="{color: p.available === 'Available' ? 'Green' : 'Red'}">{{p.available}}</div>
                 <div class="details"><b>Price </b>{{p.price}}</div>
             </div>
         </div>
         <div class="options">
             <button class="btn btn-success">Show Details</button>
-            <button class="btn btn-warning">Buy Now</button>
+            <button class="btn btn-warning" *ngIf="p.available === 'Available'; else notifyme">Buy Now</button>
+            <ng-template #notifyme>
+                <button class="btn btn-danger">Notify Me</button>
+            </ng-template>
         </div>
     </div>
 </div>
